HttpUnit release notes

Known problems:
    1. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties


Revision History:
27-Nov-2002
Problems fixed:
    1. Bug #644642: changes to form parameters made from immediate scripts were being discarded

26-Nov-2002
Problems fixed:
    1. Bug #641687: when neither NekoHTML.jar or Tidy.jar is in the classpath, an explanatory exception is now thrown
    2. Javascript: multiple form parameters with the same name were only being treated as an array if they were checkboxes;
       otherwise, they were being ignored - this would result in a "undefined value has no properties" error message.

25-Nov-2002
Acknowledgements:
    Thanks to Larry Hamel for supplying an ant target to run Example.java

Additions:
    1. There is now an ant target to run the Example program.
    2. The Rhino jar now includes a patch to improve error-reporting for unsupported DOM elements

Problems fixed:
    1. Table <th> elements were being handled *after* <td> elements in the same row
    2. The <base> tag was not being used to find included scripts

22-Nov-2002
Notes:
    1. The nekohtml.jar included has a patch supplied by the author (Andy Clark) to support applet parameter tags

Additions:
    1. Added support for applet parameters and archives

20-Nov-2002
Problems fixed:
    1. HttpUnit now ignores empty parameters on form actions, as IE and Netscape do.

18-Nov-2002
Acknowledgements:
    Thanks to Neville Wylie for catching the top.parent and frame name index problems

Problems fixed:
    1. The parent attribute of the top frame was returning null rather than the frame.
    2. Frame names used as indexes into the Window.frames array were not being recognized.

17-Nov-2002
Problems fixed: