@@ -65,7 +65,13 @@ Inline and included scripts are supported, as are the following DOM elements:
 <h3>Location</h3>
 <h4>properties</h4>
 <ul>
-<li>href  - r/w the current window location. Setting this value initiates a new request to the server</li>
+<li>href      - r/w the current window location. Setting this value initiates a new request to the server</li>
+<li>host      - r/o the host and port portion of the current window location</li>
+<li>hostname  - r/o the host portion of the current window location</li>
+<li>port      - r/o the port portion of the current window location</li>
+<li>protocol  - r/o the port portion of the current window location</li>
+<li>pathname  - r/w the path portion of the current window location. Setting this value initiates a new request to the server</li>
+<li>search    - r/w the query portion of the current window location. Setting this value initiates a new request to the server</li>
 </ul>
 <h4>methods</h4>
 <ul>
